# crogue

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT  README
.cache/clangd/index/: game.c.77E5CB4D54E9F6F9.idx  game.h.55FE885566035583.idx  item.c.B357DDF14C7C9327.idx  item.h.ADF84B552B1CDC9B.idx  light.c.FC7216B7079131F4.idx  light.h.75A9FA33E098ADFD.idx  main.c.DEC3AA059CF15A08.idx  player.c.364DA93A574C3CEE.idx  player.h.363ED1D88616EA83.idx  rogue.h.6B1C462950EDACBA.idx  term.c.35805895C439852F.idx  term.h.D146BB95F37F200B.idx  tile.c.FAB09AF23AC26028.idx  tile.h.86FA31D8756E0BB3.idx  utils.h.2E63520E2E653BD8.idx
engine/: game.c  game.h  item.c  item.h  light.c  light.h  player.c  player.h  rogue.h  tile.c  tile.h  utils.c  utils.h
include/: game.h  graphics.h  light.h  player.h  rogue.h  tile.h  utils.h
render/term/: term.c  term.h
src/: game.c  graphics.c  light.c  main.c  player.c  tile.c
